--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,6 @@
 ---
 layout: splash
-header:
-  image: assets/images/mme_header-01.jpg
+header: assets/images/mme_header-01.jpg
 ---
 
 {{ content }}
