--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,7 @@
 ---
 layout: splash
-header: assets/images/mme_header-01.jpg
+header:
+  image: assets/images/mme_header-01.jpg
 ---
 
 {{ content }}
